Adding md files

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,10 +12,10 @@ const { title, href } = Astro.props;
 	<Logo href={"/"} />
 	<h1 class="text-style">{title}</h1>
 	<div>
-		<a href={"/starters/"} title={title}></a>
-		<a href={"/soups/"} title={title}></a>
-		<a href={"/mains/"} title={title}></a>
-		<a href={"/desserts/"} title={title}></a>
+		<a href={"/starters/"} title={title}>STARTERS</a>
+		<a href={"/soups/"} title={title}>SOUPS</a>
+		<a href={"/mains/"} title={title}>MAINS</a>
+		<a href={"/desserts/"} title={title}>DESSERTS</a>
 	</div>
 </header>
 
