--- a/src/pages/soups.astro
+++ b/src/pages/soups.astro
@@ -2,6 +2,7 @@
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
 import MealType from '../layouts/MealType.astro';
+
 ---
 
 <!-- <Header title='Soups and Chowders'/> -->
@@ -11,8 +12,8 @@ import MealType from '../layouts/MealType.astro';
 		<ul role="list" class="link-card-grid">
 			
 			<Card
-				href="https://astro.build/chat/"
-				title="A"
+				href="/posts/starters2/"
+				title="Corn Chowder"
 				body="Come say hi to our amazing Discord community. ❤️"
 				image='/../images/cornChowder.jpeg'
 			/>
@@ -39,5 +40,13 @@ import MealType from '../layouts/MealType.astro';
 </MealType>
 
 <style>
+
+ul {
+		display: flex;
+		width: 80%;
+		margin: auto;
+		padding: 0;
+		
+	}
 
 </style>
