--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,7 @@ const { title, href } = Astro.props;
 		<a href={"/soups/"} title={title}>SOUPS</a>
 		<a href={"/mains/"} title={title}>MAINS</a>
 		<a href={"/desserts/"} title={title}>DESSERTS</a>
+		<a href={"/miscellaneous/"} title={title}>MISCELLANEOUS</a>
 	</div>
 </header>
 
