--- a/src/pages/miscellaneous.astro
+++ b/src/pages/miscellaneous.astro
@@ -1,39 +1,36 @@
 ---
 import Card from '../components/Card.astro';
-import Header from '../components/Header.astro';
 import MealType from '../layouts/MealType.astro';
 
 ---
 
-<!-- <Header title='Soups and Chowders'/> -->
-<MealType title="SOUPS">
+<MealType title="MISCELLANEOUS">
 	<main>
-
 		<ul role="list" class="link-card-grid">
 			
 			<Card
-				href="/posts/soups1-cornChowder/"
-				title="Corn Chowder"
-				body="Come say hi to our amazing Discord community. ❤️"
-				image='/../images/cornChowder.jpeg'
+				href="/posts/miscellaneous1-pasta/"
+				title="Pasta Dough"
+				body="For long pastas mostly."
+				image='/../images/pasta.jpg'
 			/>
 			<Card
-				href="https://astro.build/chat/"
+				href="/posts/miscellaneous1-pasta/"
 				title="B"
 				body="Come say hi to our amazing Discord community. ❤️"
-				image='/../images/cornChowder.jpeg'
+				image='/../images/pasta.jpg'
 			/>
 			<Card
-				href="https://astro.build/chat/"
+				href="/posts/miscellaneous1-pasta/"
 				title="C"
 				body="Come say hi to our amazing Discord community. ❤️"
-				image='/../images/cornChowder.jpeg'
+				image='/../images/pasta.jpg'
 			/>
 			<Card
-				href="https://astro.build/chat/"
+				href="/posts/miscellaneous1-pasta/"
 				title="D"
 				body="Come say hi to our amazing Discord community. ❤️"
-				image='/../images/cornChowder.jpeg'
+				image='/../images/pasta.jpg'
 			/>
 		</ul>
 	</main>
