--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,10 +22,10 @@ const { href, title, body, image } = Astro.props;
 	</a>
 </li>
 <style>
+	
 	 .link-card {
 		list-style: none;
-		display: flex;
-		padding: 0.15rem;
+		/* padding: 0.15rem; */
 		background-color: white;
 		background-image: var(--accent-gradient);
 		border-radius: 0.5rem;
@@ -33,29 +33,46 @@ const { href, title, body, image } = Astro.props;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
 
-		width: 50%;
-		height: 500px;
-		margin: 5px;
+		width: 320px;
+		height: 470px; 
+		margin: 15px;
 	}
 
 	.link-card > a {
-		width: 100%;
+		display: flex;
+		flex-direction: column;
 		text-decoration: none;
 		line-height: 1.4;
-		padding: 1rem 1.3rem;
+		padding: 0;
 		border-radius: 0.35rem;
 		color: #111;
 		background-color: white;
 		opacity: 0.8;
+		height: 100%;
 	}
 
 
 	img {
-		min-width: 220px;
-		max-width: 90%;
-		height: 50%;
-		margin: auto;
+		width: 100%;
+		height: 200px;
+		object-fit: cover;
 		border-radius: 0.5rem;
 
+
+		/* min-height: 50%;
+		max-height: 50%;
+		margin-left: 10%;
+		margin-right: 10%;
+		height: fit-content;
+		min-height: 50%;
+		width: fit-content; */
+
+	}
+
+	a {
+		margin: 0%;
+		padding: 5%;
+		flex-direction: column;
+		
 	}
 </style>
