--- a/src/pages/mains.astro
+++ b/src/pages/mains.astro
@@ -6,23 +6,20 @@ import MealType from '../layouts/MealType.astro';
 
 <MealType title="MAINS">
 	<main>
-		<h1>Welcome to <span class="text-gradient">MAINS</span></h1>
-		<p class="instructions">
-			Main Courses
-		</p>
+		
 		<ul role="list" class="link-card-grid">
 			
 			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-				image='/../images/chicken.jpeg'
+				href="/posts/mains1-bolognese"
+				title="Ragu Bolognese"
+				body="Perfect for Spaghetti or Lasagna."
+				image='/../images/bolognese.jpeg'
 			/>
 			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-				image='/../images/chicken.jpeg'
+				href="/posts/mains2-coqAuVin"
+				title="Coq Au Vin"
+				body="Thanks to Adam Ragusea this fabulous classic has new and easy incarnation."
+				image='/../images/coqAuVin.jpeg'
 			/>
 			<Card
 				href="https://astro.build/chat/"
@@ -41,46 +38,11 @@ import MealType from '../layouts/MealType.astro';
 </MealType>
 
 <style>
-	/* main {
+ul {
+		display: flex;
+		width: 80%;
 		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
 		padding: 0;
-	} */
+		
+	}
 </style>
