--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,7 +22,7 @@ const { href, title, body, image } = Astro.props;
 	</a>
 </li>
 <style>
-	 .link-card {
+	.link-card {
 		list-style: none;
 		display: flex;
 		padding: 0.15rem;
@@ -31,7 +31,8 @@ const { href, title, body, image } = Astro.props;
 		border-radius: 0.5rem;
 		background-position: 100%;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+			0 2px 4px -2px rgba(0, 0, 0, 0.1);
 
 		width: 50%;
 		height: 500px;
@@ -49,13 +50,11 @@ const { href, title, body, image } = Astro.props;
 		opacity: 0.8;
 	}
 
-
 	img {
 		min-width: 220px;
 		max-width: 90%;
 		height: 50%;
 		margin: auto;
 		border-radius: 0.5rem;
-
 	}
 </style>
