Things go well for once

--- a/src/pages/mains.astro
+++ b/src/pages/mains.astro
@@ -30,6 +30,30 @@ import MealType from "../layouts/MealType.astro";
 				body="Original old fashion recipe."
 				image="/../images/kotbullar.jpeg"
 			/>
+			<Card
+				href="/posts/mains1-bolognese"
+				title="Ragu Bolognese"
+				body="Perfect for Spaghetti or Lasagna."
+				image="/../images/bolognese.jpeg"
+			/>
+			<Card
+				href="/posts/mains2-coqAuVin"
+				title="Coq Au Vin"
+				body="Thanks to Adam Ragussea tis old classic got new interface."
+				image="/../images/coqAuVin.jpeg"
+			/>
+			<Card
+				href="/posts/mains3-enchiladas"
+				title="Community"
+				body="Delicious and cheesee!"
+				image="/../images/enchiladas.jpeg"
+			/>
+			<Card
+				href="/posts/mains4-kotbullar"
+				title="Kotbullar"
+				body="Original old fashion recipe."
+				image="/../images/kotbullar.jpeg"
+			/>
 		</ul>
 	</main>
 </MealType>
