--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -34,7 +34,7 @@ const { href, title, body, image } = Astro.props;
 		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 			0 2px 4px -2px rgba(0, 0, 0, 0.1);
 
-		width: 50%;
+		width: 31%;
 		height: 500px;
 		margin: 5px;
 	}
@@ -51,10 +51,11 @@ const { href, title, body, image } = Astro.props;
 	}
 
 	img {
-		min-width: 220px;
+		min-width: 309px;
 		max-width: 90%;
 		height: 50%;
 		margin: auto;
 		border-radius: 0.5rem;
+		background-size: contain;
 	}
 </style>
