--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,18 @@ import HomeHeader from "../components/HomeHeader.astro";
 				title="DESSERTS"
 				body="Go to my first made from scratch page in this project"
 			/>
+			<Card
+				href="/desserts/"
+				image="/images/cake.jpeg"
+				title="SALADS"
+				body="Go to my first made from scratch page in this project"
+			/>
+			<Card
+				href="/desserts/"
+				image="/images/cake.jpeg"
+				title="TIPS AND TRICKS"
+				body="Go to my first made from scratch page in this project"
+			/>
 		</ul>
 	</main>
 </Layout>
@@ -40,6 +52,7 @@ import HomeHeader from "../components/HomeHeader.astro";
 <style>
 	ul {
 		display: flex;
+		flex-wrap: wrap;
 		width: 80%;
 		margin: auto;
 		margin-top: 140px;
@@ -89,10 +102,9 @@ import HomeHeader from "../components/HomeHeader.astro";
 	.instructions strong {
 		color: rgb(var(--accent));
 	}*/
-	/* .link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+	.link-card-grid {
+		max-width: 80%;
 		gap: 1rem;
 		padding: 0;
-	}  */
+	}  
 </style>
