New css and grid

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -13,8 +13,8 @@ const { href } = Astro.props;
 
 .logoImage {
 	width: 150px;
-	height: 100%;
-	margin: 0%;
+	height: 150px;
+	margin: auto;
 }
 
 </style>
