--- a/src/pages/starters.astro
+++ b/src/pages/starters.astro
@@ -43,5 +43,11 @@ import MealType from "../layouts/MealType.astro";
 		
 	}
 
+	main {
+		margin: auto;
+		width: 100%;
+		display: grid;
+	}
+
 	
 </style>
