--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -34,7 +34,7 @@ const { href, title, body, image } = Astro.props;
 		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 			0 2px 4px -2px rgba(0, 0, 0, 0.1);
 
-		width: 85%;
+	width: 90%;
 		height: 400px;
 		margin: 20px;
 	}
@@ -51,8 +51,8 @@ const { href, title, body, image } = Astro.props;
 	}
 
 	img {
-		min-width: 309px;
-		max-width: 90%;
+		/* min-width: 309px; */
+		max-width: 100%;
 		height: 60%;
 		margin: auto;
 		border-radius: 0.5rem;
