--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,14 +25,16 @@ const { title, href } = Astro.props;
 		margin: auto;
 		text-align: center;
 		margin-bottom: 150px;
-
-		display: flex;
-		justify-content: space-between;
+display: grid;
+		/* display: flex;
+		justify-content: space-between; */
 	}
 
 	a {
 		margin: 10px;
 		color: rgb(31, 31, 31);
+		font-size: 20px;
+		font-weight: 900;
 	}
 
 	a:link {
@@ -54,5 +56,7 @@ const { title, href } = Astro.props;
 	h1 {
 		color: rgb(31, 31, 31);
 		text-align: center;
+		font-size: 40px;
+
 	}
 </style>
