--- a/src/pages/soups.astro
+++ b/src/pages/soups.astro
@@ -1,6 +1,5 @@
 ---
 import Card from '../components/Card.astro';
-import Header from '../components/Header.astro';
 import MealType from '../layouts/MealType.astro';
 
 ---
@@ -42,11 +41,20 @@ import MealType from '../layouts/MealType.astro';
 <style>
 
 ul {
-		display: flex;
-		width: 80%;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: ;
+		grid-column-gap: 3px;
+		grid-row-gap: 3px;
+		width: 75%;
 		margin: auto;
+		margin-top: 10px;
 		padding: 0;
-		
+	}
+
+	main {
+		margin: auto;
+		width: 100%;
 	}
 
 </style>
