--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -53,6 +53,8 @@ const { href, title, body, image } = Astro.props;
 	img {
 		/* min-width: 309px; */
 		max-width: 100%;
+		min-width: 100%;
+
 		height: 60%;
 		margin: auto;
 		border-radius: 0.5rem;
