--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,11 +11,15 @@ const { title, href } = Astro.props;
 <header class="header">
 	<Logo href={"/"} />
 	<h1 class="text-style">{title}</h1>
-	<div>
-		<a href={"/starters/"} title={title}>STARTERS</a>
-		<a href={"/soups/"} title={title}>SOUPS</a>
-		<a href={"/mains/"} title={title}>MAINS</a>
-		<a href={"/desserts/"} title={title}>DESSERTS</a>
+	<div class="links">
+		<a class="starters" href={"/starters/"} title={title}>STARTERS</a>
+		<a class="soups" href={"/soups/"} title={title}>SOUPS</a>
+		<a class="mains" href={"/mains/"} title={title}>MAINS</a>
+		<a class="desserts" href={"/desserts/"} title={title}>DESSERTS</a>
+		<a class="salads" href={"/salads/"} title={title}>SALADS</a>
+		<a class="tipsAndTricks" href={"/tipsAndTricks/"} title={title}
+			>TIPS & TRICKS</a
+		>
 	</div>
 </header>
 
@@ -23,11 +27,41 @@ const { title, href } = Astro.props;
 	.header {
 		width: 95%;
 		margin: auto;
-		text-align: center;
+		/* text-align: center; */
 		margin-bottom: 150px;
-display: grid;
 		/* display: flex;
 		justify-content: space-between; */
+		display: grid;
+		grid-template-columns: repeat(6, 1fr);
+		grid-template-rows: 180px 50px;
+		grid-column-gap: 0px;
+		grid-row-gap: 0px;
+	}
+
+	.links {
+		/* flex-direction: row;
+		display: flex; */
+		display: grid;
+
+	}
+
+	.starters {
+		grid-area: 2 / 1 / 3 / 2;
+	}
+	.soups {
+		grid-area: 2 / 2 / 3 / 3;
+	}
+	.mains {
+		grid-area: 2 / 3 / 3 / 4;
+	}
+	.desserts {
+		grid-area: 2 / 4 / 3 / 5;
+	}
+	.salads {
+		grid-area: 2 / 5 / 3 / 6;
+	}
+	.tipsAndTricks {
+		grid-area: 2 / 6 / 3 / 7;
 	}
 
 	a {
@@ -35,6 +69,8 @@ display: grid;
 		color: rgb(31, 31, 31);
 		font-size: 20px;
 		font-weight: 900;
+		/* align-items: center;
+        justify-content: space-around; */
 	}
 
 	a:link {
@@ -57,6 +93,6 @@ display: grid;
 		color: rgb(31, 31, 31);
 		text-align: center;
 		font-size: 40px;
-
+		grid-area: 1 / 4 / 2 / 7;
 	}
 </style>
