--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,8 @@ const { title, href } = Astro.props;
 <style>
 	.header {
 		width: 95%;
-		margin: auto;
+		margin-top: 20px;
+		margin-left: 20px;
 		/* text-align: center; */
 		margin-bottom: 150px;
 		/* display: flex;
