--- a/src/components/HomeHeader.astro
+++ b/src/components/HomeHeader.astro
@@ -17,7 +17,8 @@ const { title, href } = Astro.props;
 	.HomeHeader {
 		width: 100%;
 		margin: auto;
-		margin-top: 25px;
+		margin-top: 20px;
+		margin-left: 20px;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: 1fr;
