--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import HomeHeader from "../components/HomeHeader.astro";
 				body="Not much but all I could get. Not a big salad eater."
 			/>
 			<Card
-				href="/desserts/"
+				href="/tipsAndTricks/"
 				image="/images/pastaWrack.webp"
 				title="TIPS AND TRICKS"
 				body="Hard earned knowledge."
