--- a/src/layouts/MealType.astro
+++ b/src/layouts/MealType.astro
@@ -31,16 +31,16 @@ const { title } = Astro.props;
 </html>
 <style>
 	:root {
-		--accent: 217, 86, 43;
+		--accent: 88, 86, 88;
 		--accent-gradient: linear-gradient(
 			45deg,
 			rgb(var(--accent)),
-			#dac455 30%,
+			#d1dcbd 30%,
 			white 60%
 		);
 	}
 	html {
 		font-family: "Montserrat", sans-serif;
-		background-color: #e0c998;
+		background-color: #d6d8d2;
 	}
 </style>
