--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,9 +1,14 @@
 ---
+import BlogBody from '../components/BlogBody.astro';
+import HeaderForPosts from '../components/HeaderForPosts.astro';
+
 export interface Props {
+	image: string;
 	title: string;
+	body: string;
 }
 
-const { title } = Astro.props;
+const { img, title, href } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -22,7 +27,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<HeaderForPosts title="THE COOK BOOK"/>
+		<BlogBody href={href} title={title} image={img} body="dupa"/>
 		<slot />
+		<!-- <Footer /> -->
 	</body>
 </html>
 <style>
@@ -37,7 +45,8 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: "Montserrat", sans-serif;
-		background-color: #f6f6f6;
+		background-color: #d6d8d2;
+
 	}
 
 </style>
