--- a/src/pages/starters.astro
+++ b/src/pages/starters.astro
@@ -8,7 +8,7 @@ import MealType from "../layouts/MealType.astro";
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="/posts/starters2/"
-				title="Gratin"
+				title="PIPKO BOLESCI"
 				body="Greasy and delicious."
 				image="/../images/gratin.jpeg"
 			/>
