--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,19 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import HomeHeader from "../components/HomeHeader.astro";
+import { getCollection } from 'astro:content';
+const blogEntries = await getCollection('blog');
 ---
-
+<ul>
+	{blogEntries.map(blogPostEntry => (
+	  <li>
+		<a href={`/my-blog-url/${blogPostEntry.slug}`}>{blogPostEntry.data.title}</a>
+		<time datetime={blogPostEntry.data.publishedDate.toISOString()}>
+		  {blogPostEntry.data.publishedDate.toDateString()}
+		</time>
+	  </li>
+	))}
+  </ul>
 <Layout title="The Cook Book">
 	<HomeHeader title={"The Cook Book"} />
 	<main>
