--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import HomeHeader from "../components/HomeHeader.astro";
-import { getCollection } from 'astro:content';
-const blogEntries = await getCollection('blog');
+// import { getCollection } from 'astro:content';
+// const blogEntries = await getCollection('blog');
 ---
-<ul>
+<!-- <ul>
 	{blogEntries.map(blogPostEntry => (
 	  <li>
 		<a href={`/my-blog-url/${blogPostEntry.slug}`}>{blogPostEntry.data.title}</a>
@@ -14,7 +14,7 @@ const blogEntries = await getCollection('blog');
 		</time>
 	  </li>
 	))}
-  </ul>
+  </ul> -->
 <Layout title="The Cook Book">
 	<HomeHeader title={"The Cook Book"} />
 	<main>
