--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,29 +1,48 @@
+/* .nav-links {
+  width: 100%;
+  top: 5rem;
+  left: 48px;
+  background-color: #ff9776;
+  display: none;
+  margin: 0;
+}
+
+.nav-links a {
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.nav-links a:hover, a:focus {
+  background-color: #ff9776;
+}
+
+.expanded {
+  display: unset;
+} */
+
+
 @media screen and (max-width: 400px) {
-  .nav-links {
-    margin-left: 5em;
-    display: block;
-    position: static;
-    width: auto;
-    background-color: yellow;
+ 
+  html {
+    background-color: #378ce1;
   }
 }
 
 @media screen and (min-width: 400px) and (max-width: 900px) {
-  .nav-links {
-    margin-left: 5em;
-    display: block;
-    position: static;
-    width: auto;
-    background-color: blue;
+
+  html {
+    background-color: #bce137;
   }
 }
 
 @media screen and (min-width: 901px) {
-  .nav-links {
-    margin-left: 5em;
-    display: block;
-    position: static;
-    width: auto;
-    background-color: red;
+ 
+  html {
+    background-color: #b00ebb;
   }
 }
