--- a/src/components/HomeHeader.astro
+++ b/src/components/HomeHeader.astro
@@ -1,5 +1,7 @@
 ---
 import Logo from "./Logo.astro";
+import '../styles/global.css';
+
 
 export interface Props {
 	title: string;
@@ -13,7 +15,7 @@ const { title, href } = Astro.props;
 	<h1 class="text-style">{title}</h1>
 </header>
 
-<style>
+<style is:global>
 	.HomeHeader {
 		width: 100%;
 		margin: auto;
