--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -51,19 +51,19 @@ const { img, title, href, body } = Astro.props;
 	main {
 		padding-top: 20px;
 		margin: auto;
-		width: 80%;
+		width: 100%;
 		background-color: rgb(211, 230, 213);
 		text-align: center;
 		border-radius: 0.5rem;
 	}
 
 	ul {
-		width: 80%;
+		width: 100%;
 		text-align: left;
 		background-color: rgb(60, 143, 216);
 	}
 
-	/* img {
-		border-radius: 0.5rem;
-	} */
+	body {
+		width: 90%;
+	}
 </style>
