--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,15 @@
     margin-top: 140px;
     padding: 0;
   }
+
+  .recipe {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    background-color: brown;
+  }
 }
 
 @media screen and (min-width: 400px) and (max-width: 900px) {
@@ -30,6 +39,14 @@
     margin-top: 140px;
     padding: 0;
   }
+
+  .recipe {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
 }
 
 @media screen and (min-width: 901px) {
@@ -40,12 +57,20 @@
   ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 10;
+    grid-template-rows: auto-fill;
     grid-column-gap: 3px;
     grid-row-gap: 3px;
     width: 75%;
     margin: auto;
     margin-top: 140px;
     padding: 0;
+  }
+
+  .recipe {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
   }
 }
